# CryptoFinTech2018Template

./: CMakeLists.txt  README.md
gadgets/: sha256_commitment_copy_gadget.hpp  sha256_commitment_copy_gadget.tcc  sha256_commitment_gadget.hpp  sha256_commitment_gadget.tcc  sha256_comparison_gadget.hpp  sha256_comparison_gadget.tcc  sha256_double_comparison_gadget.hpp  sha256_double_comparison_gadget.tcc  sha256_sym_range_gadget.hpp  sha256_sym_range_gadget.tcc  sha256_value_comparison_gadget.hpp  sha256_value_comparison_gadget.tcc
tests/: main.cpp  main_copy.cpp  sha256_comp_greater_eq_gadget_test.cpp  sha256_comp_greater_gadget_test.cpp  sha256_comp_less_eq_gadget_test.cpp  sha256_comp_less_gadget_test.cpp  sha256_double_comp_gadget_test.cpp  sha256_sym_range_gadget_test.cpp  sha256_value_equal_gadget_test.cpp  sha256_value_greater_eq_gadget_test.cpp
utils/: proof.hpp  proof.tcc  random.cpp  random.hpp
